  - Fixed defect #820 Proper handling of TV shows by Kinopoisk plugin
  - Fixed defect #821 Specify UTF-8 encoding in header of main index.htm
  - Enhancement  #823 Index all English chars in single A-Z category
  - Fixed defect #824 BluRay disks Source is marked as DVD
  - Fixed defect #825 Focus is not on the play button, when year indexing is active

MovieJukebox 1.0.16 beta
------------------------
  - Enhancement  #113 Single series pages. If the mjb.singleSeriesPage=true the separate season index is generated for each series.
  - Enhancement  #171 View & download internet movie trailers
  - Enhancement  #231 Default skin details show TV episodes/parts list in compact form in order to avoid slow scrolling.
                      The episode names are shown in the dynamic status bar by selecting particular episode.
  - Enhancement  #308 Plugin for German Database ofdb.de
  - Enhancement  #321 Episode list in reverse order
  - Fixed defect #332 International characters from NFO
  - Fixed defect #383 UTF-8 Encoding for Movie object - Allows extended character sets in the movie details
  - Enhancement  #397 Episode image for TV show episodes downloaded from TheTVDB.com
  - Enhancement  #418 Option to exclude files without external subtitles
  - Enhancement  #421 Plugin for Swedish movie database filmdelta.se
  - Fixed defect #422 Encoding problems with link of accentuated categories or two words categories on Categories.html
  - Fixed defect #433 Local fanart not handled correctly for Unknown TV series
  - Enhancement  #435 User customizeable perspective angle
  - Fixed defect #436 If the mjb.homePage property is unspecified, a valid home page will be chosen
  - Enhancement  #437 Improvements to multi-episode file support.
  - Enhancement  #441 Ability to turn off internet scraping for an entire library
  - Enhancement  #442 Added proxy support
  - Enhancement  #444 New plugin to retrieve movie data from Russian movie database www.kinopoisk.ru