@@ -80,6 +80,8 @@ MovieJukebox 1.0.17 beta
   - Enhancement  #823 Index all English chars in single A-Z category
   - Fixed defect #824 BluRay disks Source is marked as DVD
   - Fixed defect #825 Focus is not on the play button, when year indexing is active
+  - Enhancement  #826 Exclude multi part BluRay from being indexed
+  - Fixed defect #827 Sratim plugin series episode name was not is visual format
 
 MovieJukebox 1.0.16 beta
 ------------------------
